# FoxMarkov

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  node.cpp  node.h
